fix visibility pagination button

--- a/src/scss/components/_pagination.scss
+++ b/src/scss/components/_pagination.scss
@@ -9,6 +9,10 @@
         justify-content: space-between;
     }
     button{
-        margin: 0 0;
+        margin: 0 0 1rem 0;
     }
+}
+
+.ocultar {
+    visibility: hidden;
 }
